@@ -1,52 +1,68 @@
 package network.crypta.crypt;
 
-import static org.junit.Assert.assertEquals;
-
 import java.nio.charset.StandardCharsets;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.List;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.EnumSource;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-public class MultiHashDigesterTest {
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+@SuppressWarnings({"java:S100", "java:S4790"})
+@ExtendWith(MockitoExtension.class)
+class MultiHashDigesterTest {
 
   @Test
-  public void createFromBitmask() {
+  void fromBitmask_whenSingleType_returnsOnlyThatType() {
     for (HashType hashType : HashType.values()) {
       MultiHashDigester digester = MultiHashDigester.fromBitmask(hashType.bitmask);
+
       List<HashResult> results = digester.getResults();
 
       assertEquals(1, results.size());
-      assertEquals(hashType, results.get(0).type);
+      assertEquals(hashType, results.getFirst().type);
     }
   }
 
   @Test
-  public void noHash() {
+  void fromBitmask_whenZero_returnsEmptyResults() {
     MultiHashDigester digester = MultiHashDigester.fromBitmask(0);
+
     List<HashResult> results = digester.getResults();
 
-    assertEquals(0, results.size());
+    assertTrue(results.isEmpty());
   }
 
   @Test
-  public void multiHash() {
+  void fromBitmask_whenMultipleBits_resultsOrderedByEnum() {
     MultiHashDigester digester =
         MultiHashDigester.fromBitmask(
-            HashType.SHA1.bitmask | HashType.MD5.bitmask | HashType.SHA256.bitmask);
+            HashType.MD5.bitmask | HashType.SHA512.bitmask | HashType.SHA1.bitmask);
+
     List<HashResult> results = digester.getResults();
 
     assertEquals(3, results.size());
+    // Order must follow HashType.values(): SHA1, MD5, SHA256, SHA384, SHA512, ED2K, TTH
     assertEquals(HashType.SHA1, results.get(0).type);
     assertEquals(HashType.MD5, results.get(1).type);
-    assertEquals(HashType.SHA256, results.get(2).type);
+    assertEquals(HashType.SHA512, results.get(2).type);
   }
 
   @Test
-  public void digestEmpty() {
+  void getResults_whenNoUpdate_hashesEmptyInput_matchKnownHex() {
     MultiHashDigester digester =
         MultiHashDigester.fromBitmask(
             HashType.SHA1.bitmask | HashType.MD5.bitmask | HashType.SHA256.bitmask);
 
     List<HashResult> results = digester.getResults();
+
     assertEquals("da39a3ee5e6b4b0d3255bfef95601890afd80709", results.get(0).hashAsHex());
     assertEquals("d41d8cd98f00b204e9800998ecf8427e", results.get(1).hashAsHex());
     assertEquals(
@@ -55,17 +71,108 @@ public class MultiHashDigesterTest {
   }
 
   @Test
-  public void updateAndDigest() {
+  void update_whenSingleByte_producesExpectedJcaDigests() throws NoSuchAlgorithmException {
     MultiHashDigester digester =
         MultiHashDigester.fromBitmask(
             HashType.SHA1.bitmask | HashType.MD5.bitmask | HashType.SHA256.bitmask);
-    digester.update("$".getBytes(StandardCharsets.UTF_8), 0, 1);
+
+    byte[] input = "$".getBytes(StandardCharsets.UTF_8);
+    digester.update(input, 0, 1);
 
     List<HashResult> results = digester.getResults();
-    assertEquals("3cdf2936da2fc556bfa533ab1eb59ce710ac80e5", results.get(0).hashAsHex());
-    assertEquals("c3e97dd6e97fb5125688c97f36720cbe", results.get(1).hashAsHex());
+
+    assertEquals(hex(MessageDigest.getInstance("SHA1").digest(input)), results.get(0).hashAsHex());
+    assertEquals(hex(MessageDigest.getInstance("MD5").digest(input)), results.get(1).hashAsHex());
     assertEquals(
-        "09fc96082d34c2dfc1295d92073b5ea1dc8ef8da95f14dfded011ffb96d3e54b",
-        results.get(2).hashAsHex());
+        hex(MessageDigest.getInstance("SHA-256").digest(input)), results.get(2).hashAsHex());
+  }
+
+  @ParameterizedTest
+  @EnumSource(
+      value = HashType.class,
+      names = {"SHA1", "MD5", "SHA256", "SHA384", "SHA512"})
+  void update_whenJcaType_matchesIndependentJca(HashType type) throws NoSuchAlgorithmException {
+    MultiHashDigester digester = MultiHashDigester.fromBitmask(type.bitmask);
+
+    byte[] input = "Hello, Crypta!".getBytes(StandardCharsets.UTF_8);
+    digester.update(input, 0, input.length);
+
+    byte[] expected = MessageDigest.getInstance(type.javaName).digest(input);
+
+    List<HashResult> results = digester.getResults();
+
+    assertEquals(1, results.size());
+    assertEquals(type, results.getFirst().type);
+    assertArrayEquals(expected, HashResult.get(results.toArray(new HashResult[0]), type));
+  }
+
+  @Test
+  void update_whenOffsetAndLength_hashesSubrangeOnly() throws NoSuchAlgorithmException {
+    MultiHashDigester digester = MultiHashDigester.fromBitmask(HashType.MD5.bitmask);
+
+    byte[] input = "abcXYZdef".getBytes(StandardCharsets.UTF_8); // hash should be for "XYZ"
+    digester.update(input, 3, 3);
+
+    byte[] expected =
+        MessageDigest.getInstance("MD5").digest("XYZ".getBytes(StandardCharsets.UTF_8));
+
+    List<HashResult> results = digester.getResults();
+    assertEquals(1, results.size());
+    assertArrayEquals(expected, HashResult.get(results.toArray(new HashResult[0]), HashType.MD5));
+  }
+
+  @Test
+  void update_whenZeroLength_isNoOpAndEqualsEmptyDigest() throws NoSuchAlgorithmException {
+    MultiHashDigester digester = MultiHashDigester.fromBitmask(HashType.SHA1.bitmask);
+
+    byte[] input = "ignored".getBytes(StandardCharsets.UTF_8);
+    digester.update(input, 0, 0);
+
+    byte[] expectedEmpty = MessageDigest.getInstance("SHA1").digest(new byte[0]);
+
+    List<HashResult> results = digester.getResults();
+    assertEquals(1, results.size());
+    assertArrayEquals(
+        expectedEmpty, HashResult.get(results.toArray(new HashResult[0]), HashType.SHA1));
+  }
+
+  @Test
+  void update_whenInvalidBounds_throwsRuntimeBoundsException() {
+    MultiHashDigester digester = MultiHashDigester.fromBitmask(HashType.SHA256.bitmask);
+    byte[] input = new byte[] {1, 2, 3};
+
+    RuntimeException ex1 =
+        assertThrows(RuntimeException.class, () -> digester.update(input, -1, 1));
+    assertTrue(
+        ex1 instanceof IndexOutOfBoundsException || ex1 instanceof IllegalArgumentException,
+        "expected IndexOutOfBoundsException or IllegalArgumentException");
+
+    RuntimeException ex2 = assertThrows(RuntimeException.class, () -> digester.update(input, 1, 5));
+    assertTrue(
+        ex2 instanceof IndexOutOfBoundsException || ex2 instanceof IllegalArgumentException,
+        "expected IndexOutOfBoundsException or IllegalArgumentException");
+  }
+
+  @Test
+  void ed2kAndTth_whenSelected_produceResultsWithDeclaredLengths() {
+    long mask = HashType.ED2K.bitmask | HashType.TTH.bitmask;
+    MultiHashDigester digester = MultiHashDigester.fromBitmask(mask);
+
+    List<HashResult> results = digester.getResults();
+
+    assertEquals(2, results.size());
+    assertEquals(HashType.ED2K, results.get(0).type);
+    assertEquals(HashType.TTH, results.get(1).type);
+    assertEquals(HashType.ED2K.hashLength, results.get(0).hashAsHex().length() / 2);
+    assertEquals(HashType.TTH.hashLength, results.get(1).hashAsHex().length() / 2);
+  }
+
+  // ----- helpers -----
+  private static String hex(byte[] bytes) {
+    StringBuilder sb = new StringBuilder(bytes.length * 2);
+    for (byte b : bytes) {
+      sb.append(String.format("%02x", b));
+    }
+    return sb.toString();
   }
 }
